# slow_motion_detector

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql.yml  linux.yml  ubuntu.yml
